--- a/Project4_Joyce.ipynb
+++ b/Project4_Joyce.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "https://github.com/joyceee916/ATMS-597-SP-2020-Project-4/blob/master/Project4_Joyce.ipynb",
-      "authorship_tag": "ABX9TyNPXXg17GcygaGbQukKRLUe",
+      "authorship_tag": "ABX9TyN/0pTfv5VqRrdtK1a5gSyr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -780,6 +780,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HZuK3chiZb5f",
+        "colab_type": "text"
+      },
+      "source": [
+        "Decision Tree Regressor"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-oVw84rQTNuz",
@@ -792,13 +802,8 @@
       },
       "source": [
         "from sklearn.tree import DecisionTreeRegressor \n",
-        "from sklearn.ensemble import RandomForestRegressor \n",
-        "\n",
         "tree_model = DecisionTreeRegressor()\n",
-        "rf_model = RandomForestRegressor()\n",
-        "\n",
-        "tree_model.fit(x_train, y_train) \n",
-        "rf_model.fit(x_train, y_train)"
+        "tree_model.fit(x_train, y_train) "
       ],
       "execution_count": 71,
       "outputs": [
@@ -823,9 +828,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_x7sQBGiZe3P",
+        "colab_type": "text"
+      },
+      "source": [
+        "Random Forest Regressor"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "y5PIUQ3P1cAp",
+        "id": "KEJGvGohZhXt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestRegressor \n",
+        "rf_model = RandomForestRegressor()\n",
+        "rf_model.fit(x_train, y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "42TtZ9zQaIo9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Evaluating Models"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mGGKc6kzZtqD",
         "colab_type": "code",
         "colab": {}
       },
@@ -847,7 +887,19 @@
       "source": [
         "# TODO look up difference between mean squared error and mean absolute error \n",
         "tree_mse = mean_squared_error(y_train, tree_model.predict(x_train))\n",
-        "tree_mae = mean_absolute_error(y_train, tree_model.predict(x_train))\n",
+        "tree_mae = mean_absolute_error(y_train, tree_model.predict(x_train))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hPfH6GoRZuU0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "rf_mse = mean_squared_error(y_train, rf_model.predict(x_train))\n",
         "rf_mae = mean_absolute_error(y_train, rf_model.predict(x_train))"
       ],
@@ -925,55 +977,9 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DOKAQPAR3eoq",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "-P2uud_X3W1w",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1NMPWCezyY6d",
-        "colab_type": "text"
-      },
-      "source": [
-        "Tar Files"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CSzR5uJCv4JR",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "Daily_Tar = open(\"daily.tar.gz\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Z2AmGfu--FEw",
+        "id": "qZeFFfRPZx1K",
         "colab_type": "code",
         "colab": {}
       },
