--- a/Project4_Joyce.ipynb
+++ b/Project4_Joyce.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "https://github.com/joyceee916/ATMS-597-SP-2020-Project-4/blob/master/Project4_Joyce.ipynb",
-      "authorship_tag": "ABX9TyP9ajDk/D1K85NZMDjaMSV4",
+      "authorship_tag": "ABX9TyP7AKMmoD8Z8mQIXsrFHExn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "XpaiuEzreXPX",
         "colab_type": "code",
-        "outputId": "79a21636-5f3d-4a45-c564-07ae0318fda3",
+        "outputId": "90d221e2-5d51-4758-9ef3-6352f6ef2301",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -57,7 +57,7 @@
       "source": [
         "cd /content/drive/My Drive/ATMS 597/Project4"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "lNJb5KMkkNw5",
         "colab_type": "code",
-        "outputId": "7c9ac165-e4c8-4830-cff6-865353df3024",
+        "outputId": "63710096-0c9c-418c-c8f7-d8f473bfc1b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
@@ -184,7 +184,7 @@
       "source": [
         "KCMI_df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +274,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -320,7 +320,7 @@
       "metadata": {
         "id": "vArpJ2siNX_O",
         "colab_type": "code",
-        "outputId": "794e3905-6e4b-4d03-b5d1-85c4c01436a6",
+        "outputId": "96d9e9fe-d8c6-4c33-b194-f5078ea501a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
@@ -329,7 +329,7 @@
       "source": [
         "GFS_df.head()"
       ],
-      "execution_count": 84,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +419,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 84
+          "execution_count": 9
         }
       ]
     },
@@ -466,7 +466,7 @@
       "metadata": {
         "id": "cX8YOzu57Jrw",
         "colab_type": "code",
-        "outputId": "d7a6d122-e043-4485-9e80-8c832c75349e",
+        "outputId": "c140d12d-4c44-4aa0-b24a-95d06cc88e92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -482,7 +482,7 @@
         "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.1, random_state=123)\n",
         "print(x_train.shape, x_test.shape, y_train.shape, y_test.shape)"
       ],
-      "execution_count": 86,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,7 +498,7 @@
       "metadata": {
         "id": "2PK-wSCpqqIV",
         "colab_type": "code",
-        "outputId": "1d487e35-65e0-4549-feec-75afa8d122b3",
+        "outputId": "980b4912-698d-45b6-db98-bc5b56feb6e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
@@ -507,7 +507,7 @@
       "source": [
         "Practice_GFS_df.head()"
       ],
-      "execution_count": 87,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +597,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 87
+          "execution_count": 13
         }
       ]
     },
@@ -606,20 +606,83 @@
       "metadata": {
         "id": "l5FK6-ACp1tn",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "69e96d55-2fb6-4904-cc48-df412bab62ac"
       },
       "source": [
         "Practice_KCMI_df[(Practice_KCMI_df.index == '2018-02-10')]"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Max_Temp</th>\n",
+              "      <th>Min_Temp</th>\n",
+              "      <th>Max_Wind</th>\n",
+              "      <th>Total_Precip</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2018-02-10</th>\n",
+              "      <td>-2.222222</td>\n",
+              "      <td>-6.111111</td>\n",
+              "      <td>8.04672</td>\n",
+              "      <td>0.3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            Max_Temp  Min_Temp  Max_Wind  Total_Precip\n",
+              "Date                                                  \n",
+              "2018-02-10 -2.222222 -6.111111   8.04672           0.3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Triq7gfS32s7",
         "colab_type": "code",
-        "outputId": "0d8b6852-a37f-482f-f8d6-067b967c432f",
+        "outputId": "b4939308-f79d-46fe-e05a-20f9c5d9fa9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -630,7 +693,7 @@
         "lin_model = LinearRegression()\n",
         "lin_model.fit(x_train, y_train)"
       ],
-      "execution_count": 88,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,23 +705,70 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 88
+          "execution_count": 15
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ju23QFMCk2ob",
+        "id": "qoqjEUURVs7k",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 372
+          "height": 70
         },
-        "outputId": "4c85f38a-7834-41c8-9809-66955fd07d1c"
+        "outputId": "25dfce7d-7a4c-4a19-976c-bdfb27d7f5f8"
       },
       "source": [
-        "# Print parameters and plot\n",
+        "Practice_KCMI_df.index.month.unique()\n",
+        "Practice_KCMI_df.index.day.unique()\n",
+        "#Practice_KCMI_df[Practice_KCMI_df.index.month==2]\n"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Int64Index([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+              "            18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31],\n",
+              "           dtype='int64', name='Date')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lk-l26snW2SR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df['hr_sin'] = np.sin(df.hr*(2.*np.pi/24))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ju23QFMCk2ob",
+        "colab_type": "code",
+        "outputId": "4c85f38a-7834-41c8-9809-66955fd07d1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 372
+        }
+      },
+      "source": [
+        "# Print parameters and plot - GFS Data\n",
         "print('Coefficients: \\n', lin_model.coef_)\n",
         "print('Mean squared error: %.2f' % mean_squared_error(y_test, lin_model.predict(x_test)))\n",
         "print('Coefficient of determination: %.2f' % r2_score(y_test, lin_model.predict(x_test)))\n",
@@ -668,7 +778,7 @@
         "\n",
         "plt.title('Linear Regression')"
       ],
-      "execution_count": 90,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,14 +821,14 @@
       "metadata": {
         "id": "1X8zSGzS48OO",
         "colab_type": "code",
+        "outputId": "d5ba14ed-777d-4d2b-fab1-197438e1b9a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
-        },
-        "outputId": "d5ba14ed-777d-4d2b-fab1-197438e1b9a7"
+        }
       },
       "source": [
-        "# Print parameters and plot\n",
+        "# Print parameters and plot - KCMI Observational Data \n",
         "print('Coefficients: \\n', lin_model.coef_)\n",
         "print('Mean squared error: %.2f' % mean_squared_error(y_test, lin_model.predict(x_test)))\n",
         "print('Coefficient of determination: %.2f' % r2_score(y_test, lin_model.predict(x_test)))\n",
@@ -728,7 +838,7 @@
         "\n",
         "plt.title('Linear Regression')"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,11 +915,11 @@
       "metadata": {
         "id": "quWaes_PSjx8",
         "colab_type": "code",
+        "outputId": "c65fe918-664e-4800-f2a4-9b370112dd97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c65fe918-664e-4800-f2a4-9b370112dd97"
+        }
       },
       "source": [
         "# TODO change back to KCMI_daily \n",
@@ -820,7 +930,7 @@
         "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.1, random_state=123)\n",
         "print(x_train.shape, x_test.shape, y_train.shape, y_test.shape)"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +967,7 @@
         "tree_model = DecisionTreeRegressor()\n",
         "tree_model.fit(x_train, y_train) "
       ],
-      "execution_count": 71,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -973,7 +1083,7 @@
         "print(\"Decision Tree training mse = \",tree_mse,\" & mae = \",tree_mae,\" & rmse = \", sqrt(tree_mse))\n",
         "print(\"Random Forest training mse = \",rf_mse,\" & mae = \",rf_mae,\" & rmse = \", sqrt(rf_mse))"
       ],
-      "execution_count": 74,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1126,7 @@
         "print(\"Decision Tree test mse = \",tree_test_mse,\" & mae = \",tree_test_mae,\" & rmse = \", sqrt(tree_test_mse))\n",
         "print(\"Random Forest test mse = \",rf_test_mse,\" & mae = \",rf_test_mae,\" & rmse = \", sqrt(rf_test_mse))"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
