--- a/Project4_Joyce_v2.ipynb
+++ b/Project4_Joyce_v2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "https://github.com/joyceee916/ATMS-597-SP-2020-Project-4/blob/master/Project4_Joyce_v2.ipynb",
-      "authorship_tag": "ABX9TyMXRAcJPwJcWdazrSY8ly9d",
+      "authorship_tag": "ABX9TyP/2hN53H9/hO5kPdrLFYpi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1170,17 +1170,17 @@
         "id": "l8HpeFgvJadX",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 383
+          "height": 758
         },
-        "outputId": "9ea56bf7-c1c9-4d67-e0d8-f76eb61b32d1"
+        "outputId": "ecedc765-1c11-4a40-9b58-e1925c61745c"
       },
       "source": [
         "# Combine GFS Profile and GFS Surface \n",
         "df2 = pd.merge(GFS_surface.reset_index(), GFS_profile.reset_index(), on='Time', how='inner')\n",
         "df2.Time = pd.to_datetime(df2.Time)\n",
-        "df2.head()"
+        "df2"
       ],
-      "execution_count": 22,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1438,25 +1438,266 @@
               "      <td>-52.434269662921345</td>\n",
               "      <td>-69.26447761194031</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40058</th>\n",
+              "      <td>2020-02-01 18:00:00</td>\n",
+              "      <td>0.29</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>986.1</td>\n",
+              "      <td>3.24</td>\n",
+              "      <td>6.7</td>\n",
+              "      <td>0.6</td>\n",
+              "      <td>6.726812</td>\n",
+              "      <td>-2.420708661417323</td>\n",
+              "      <td>-9.530575916230358</td>\n",
+              "      <td>-24.005454545454544</td>\n",
+              "      <td>-39.45106017191977</td>\n",
+              "      <td>-65.70636363636365</td>\n",
+              "      <td>-2.420708661417323</td>\n",
+              "      <td>-9.530575916230358</td>\n",
+              "      <td>-24.005454545454544</td>\n",
+              "      <td>-39.45106017191977</td>\n",
+              "      <td>-65.70636363636365</td>\n",
+              "      <td>-2.420708661417323</td>\n",
+              "      <td>-9.530575916230358</td>\n",
+              "      <td>-24.005454545454544</td>\n",
+              "      <td>-39.45106017191977</td>\n",
+              "      <td>-65.70636363636365</td>\n",
+              "      <td>-2.420708661417323</td>\n",
+              "      <td>-9.530575916230358</td>\n",
+              "      <td>-24.005454545454544</td>\n",
+              "      <td>-39.45106017191977</td>\n",
+              "      <td>-65.70636363636365</td>\n",
+              "      <td>-2.420708661417323</td>\n",
+              "      <td>-9.530575916230358</td>\n",
+              "      <td>-24.005454545454544</td>\n",
+              "      <td>-39.45106017191977</td>\n",
+              "      <td>-65.70636363636365</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40059</th>\n",
+              "      <td>2020-02-01 21:00:00</td>\n",
+              "      <td>-0.62</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.02</td>\n",
+              "      <td>984.3</td>\n",
+              "      <td>3.04</td>\n",
+              "      <td>6.7</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>6.736468</td>\n",
+              "      <td>-2.7182608695652157</td>\n",
+              "      <td>-14.782617801047117</td>\n",
+              "      <td>-18.144594594594597</td>\n",
+              "      <td>-28.9048275862069</td>\n",
+              "      <td>-61.71727272727272</td>\n",
+              "      <td>-2.7182608695652157</td>\n",
+              "      <td>-14.782617801047117</td>\n",
+              "      <td>-18.144594594594597</td>\n",
+              "      <td>-28.9048275862069</td>\n",
+              "      <td>-61.71727272727272</td>\n",
+              "      <td>-2.7182608695652157</td>\n",
+              "      <td>-14.782617801047117</td>\n",
+              "      <td>-18.144594594594597</td>\n",
+              "      <td>-28.9048275862069</td>\n",
+              "      <td>-61.71727272727272</td>\n",
+              "      <td>-2.7182608695652157</td>\n",
+              "      <td>-14.782617801047117</td>\n",
+              "      <td>-18.144594594594597</td>\n",
+              "      <td>-28.9048275862069</td>\n",
+              "      <td>-61.71727272727272</td>\n",
+              "      <td>-2.7182608695652157</td>\n",
+              "      <td>-14.782617801047117</td>\n",
+              "      <td>-18.144594594594597</td>\n",
+              "      <td>-28.9048275862069</td>\n",
+              "      <td>-61.71727272727272</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40060</th>\n",
+              "      <td>2020-02-02 00:00:00</td>\n",
+              "      <td>-0.65</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>29.0</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>984.9</td>\n",
+              "      <td>1.94</td>\n",
+              "      <td>5.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>5.403702</td>\n",
+              "      <td>-2.8084210526315774</td>\n",
+              "      <td>-24.81340314136124</td>\n",
+              "      <td>-15.122154882154883</td>\n",
+              "      <td>-22.63396551724138</td>\n",
+              "      <td>-59.826653992395435</td>\n",
+              "      <td>-2.8084210526315774</td>\n",
+              "      <td>-24.81340314136124</td>\n",
+              "      <td>-15.122154882154883</td>\n",
+              "      <td>-22.63396551724138</td>\n",
+              "      <td>-59.826653992395435</td>\n",
+              "      <td>-2.8084210526315774</td>\n",
+              "      <td>-24.81340314136124</td>\n",
+              "      <td>-15.122154882154883</td>\n",
+              "      <td>-22.63396551724138</td>\n",
+              "      <td>-59.826653992395435</td>\n",
+              "      <td>-2.8084210526315774</td>\n",
+              "      <td>-24.81340314136124</td>\n",
+              "      <td>-15.122154882154883</td>\n",
+              "      <td>-22.63396551724138</td>\n",
+              "      <td>-59.826653992395435</td>\n",
+              "      <td>-2.8084210526315774</td>\n",
+              "      <td>-24.81340314136124</td>\n",
+              "      <td>-15.122154882154883</td>\n",
+              "      <td>-22.63396551724138</td>\n",
+              "      <td>-59.826653992395435</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40061</th>\n",
+              "      <td>2020-02-02 03:00:00</td>\n",
+              "      <td>-0.77</td>\n",
+              "      <td>57.0</td>\n",
+              "      <td>39.0</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>984.3</td>\n",
+              "      <td>0.24</td>\n",
+              "      <td>3.7</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4.205948</td>\n",
+              "      <td>-2.5436842105263135</td>\n",
+              "      <td>-20.719368421052636</td>\n",
+              "      <td>-8.265439189189191</td>\n",
+              "      <td>-22.454482758620692</td>\n",
+              "      <td>-59.816287878787875</td>\n",
+              "      <td>-2.5436842105263135</td>\n",
+              "      <td>-20.719368421052636</td>\n",
+              "      <td>-8.265439189189191</td>\n",
+              "      <td>-22.454482758620692</td>\n",
+              "      <td>-59.816287878787875</td>\n",
+              "      <td>-2.5436842105263135</td>\n",
+              "      <td>-20.719368421052636</td>\n",
+              "      <td>-8.265439189189191</td>\n",
+              "      <td>-22.454482758620692</td>\n",
+              "      <td>-59.816287878787875</td>\n",
+              "      <td>-2.5436842105263135</td>\n",
+              "      <td>-20.719368421052636</td>\n",
+              "      <td>-8.265439189189191</td>\n",
+              "      <td>-22.454482758620692</td>\n",
+              "      <td>-59.816287878787875</td>\n",
+              "      <td>-2.5436842105263135</td>\n",
+              "      <td>-20.719368421052636</td>\n",
+              "      <td>-8.265439189189191</td>\n",
+              "      <td>-22.454482758620692</td>\n",
+              "      <td>-59.816287878787875</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40062</th>\n",
+              "      <td>2020-02-02 06:00:00</td>\n",
+              "      <td>-0.62</td>\n",
+              "      <td>42.0</td>\n",
+              "      <td>42.0</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>981.7</td>\n",
+              "      <td>0.54</td>\n",
+              "      <td>3.7</td>\n",
+              "      <td>2.9</td>\n",
+              "      <td>4.701064</td>\n",
+              "      <td>-4.728596491228067</td>\n",
+              "      <td>-3.893263157894732</td>\n",
+              "      <td>-7.072959183673469</td>\n",
+              "      <td>-25.15479768786127</td>\n",
+              "      <td>-60.065475285171104</td>\n",
+              "      <td>-4.728596491228067</td>\n",
+              "      <td>-3.893263157894732</td>\n",
+              "      <td>-7.072959183673469</td>\n",
+              "      <td>-25.15479768786127</td>\n",
+              "      <td>-60.065475285171104</td>\n",
+              "      <td>-4.728596491228067</td>\n",
+              "      <td>-3.893263157894732</td>\n",
+              "      <td>-7.072959183673469</td>\n",
+              "      <td>-25.15479768786127</td>\n",
+              "      <td>-60.065475285171104</td>\n",
+              "      <td>-4.728596491228067</td>\n",
+              "      <td>-3.893263157894732</td>\n",
+              "      <td>-7.072959183673469</td>\n",
+              "      <td>-25.15479768786127</td>\n",
+              "      <td>-60.065475285171104</td>\n",
+              "      <td>-4.728596491228067</td>\n",
+              "      <td>-3.893263157894732</td>\n",
+              "      <td>-7.072959183673469</td>\n",
+              "      <td>-25.15479768786127</td>\n",
+              "      <td>-60.065475285171104</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>40063 rows × 36 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                 Time  DWPC_Surf  ...            VWND_500.0           VWND_250.0\n",
-              "0 2010-01-02 06:00:00     -13.74  ...    -58.09837078651685   -71.38842696629214\n",
-              "1 2010-01-02 09:00:00     -15.19  ...    -58.10140845070422    -71.3868656716418\n",
-              "2 2010-01-02 12:00:00     -17.91  ...    -55.71501408450704   -67.52902985074627\n",
-              "3 2010-01-02 15:00:00     -20.07  ...   -61.130393258426956   -65.86134831460674\n",
-              "4 2010-01-02 18:00:00     -18.81  ...   -52.434269662921345   -69.26447761194031\n",
+              "                     Time  ...            VWND_250.0\n",
+              "0     2010-01-02 06:00:00  ...    -71.38842696629214\n",
+              "1     2010-01-02 09:00:00  ...     -71.3868656716418\n",
+              "2     2010-01-02 12:00:00  ...    -67.52902985074627\n",
+              "3     2010-01-02 15:00:00  ...    -65.86134831460674\n",
+              "4     2010-01-02 18:00:00  ...    -69.26447761194031\n",
+              "...                   ...  ...                   ...\n",
+              "40058 2020-02-01 18:00:00  ...    -65.70636363636365\n",
+              "40059 2020-02-01 21:00:00  ...    -61.71727272727272\n",
+              "40060 2020-02-02 00:00:00  ...   -59.826653992395435\n",
+              "40061 2020-02-02 03:00:00  ...   -59.816287878787875\n",
+              "40062 2020-02-02 06:00:00  ...   -60.065475285171104\n",
               "\n",
-              "[5 rows x 36 columns]"
+              "[40063 rows x 36 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 26
         }
       ]
     },
@@ -1473,6 +1714,7 @@
       },
       "source": [
         "# Combine two intermediate datasets into one feature matrix\n",
+        "# Could merge outer to preserve the 3-hour time steps, here I cut those out \n",
         "features_df = pd.merge(df1.reset_index(), df2.reset_index(), on='Time', how='inner')\n",
         "features_df.Time = pd.to_datetime(features_df.Time)\n",
         "features_df"
@@ -2201,19 +2443,6 @@
           "execution_count": 24
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hw92x59cC3iJ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
