--- a/Project4_Joyce_v2_2.ipynb
+++ b/Project4_Joyce_v2_2.ipynb
@@ -4677,43 +4677,36 @@
       "metadata": {
         "id": "nBrHVB9y6KOo",
         "colab_type": "code",
-        "outputId": "ebd9d3ff-92c2-47e1-8048-a202f8fad3cc",
+        "outputId": "6d33b571-27a9-44bb-e6b9-77b3e3be02cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 463
+          "height": 324
         }
       },
       "source": [
         "cor_target = abs(cor['WMAX_Obs'])\n",
         "\n",
-        "relevant_features = cor_target[cor_target>0.30]\n",
+        "relevant_features = cor_target[cor_target>0.40]\n",
         "features = relevant_features.keys().drop(['WMAX_Obs'])\n",
         "print(features)\n",
-        "\n",
+        "features = ['WMAX_GFS', 'PRES_Surf_min', 'WSPD_Surf_min', 'WSPD_Surf_max', 'WSPD_Surf_mean', 'WSPD_Surf_sum', 'UWND_925.0_max', 'HGHT_500.0_mean', 'UWND_850.0_mean']\n",
         "target = ['WMAX_Obs']\n",
         "\n",
-        "x_test, y_test, rf_model = rf_model_func(features, target, n_estimators = [100], max_features = [5])"
+        "x_test, y_test, rf_model = rf_model_func(features, target, n_estimators = [300], max_features = [5])"
       ],
-      "execution_count": 180,
+      "execution_count": 191,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Index(['TMAX_GFS', 'TMIN_GFS', 'WMAX_GFS', 'PRES_Surf_min', 'WSPD_Surf_min',\n",
-            "       'LCLD_Surf_max', 'UWND_Surf_max', 'VWND_Surf_max', 'WSPD_Surf_max',\n",
-            "       'LCLD_Surf_mean', 'PRES_Surf_mean', 'UWND_Surf_mean', 'WSPD_Surf_mean',\n",
-            "       'LCLD_Surf_sum', 'PRES_Surf_sum', 'UWND_Surf_sum', 'WSPD_Surf_sum',\n",
-            "       'HGHT_925.0_min', 'HGHT_850.0_min', 'HGHT_700.0_min', 'HGHT_500.0_min',\n",
-            "       'TMPC_925.0_min', 'TMPC_850.0_min', 'TMPC_700.0_min', 'TMPC_500.0_min',\n",
-            "       'UWND_850.0_min', 'UWND_700.0_min', 'UWND_500.0_min', 'HGHT_925.0_max',\n",
-            "       'HGHT_850.0_max', 'HGHT_700.0_max', 'HGHT_500.0_max', 'UWND_925.0_max',\n",
-            "       'UWND_850.0_max', 'UWND_700.0_max', 'UWND_500.0_max', 'VWND_925.0_max',\n",
-            "       'VWND_850.0_max', 'VWND_700.0_max', 'VWND_500.0_max', 'HGHT_925.0_mean',\n",
-            "       'HGHT_850.0_mean', 'HGHT_700.0_mean', 'HGHT_500.0_mean',\n",
-            "       'TMPC_500.0_mean', 'UWND_925.0_mean', 'UWND_850.0_mean',\n",
-            "       'UWND_700.0_mean', 'UWND_500.0_mean', 'HGHT_925.0_sum',\n",
-            "       'HGHT_850.0_sum', 'HGHT_700.0_sum', 'HGHT_500.0_sum', 'TMPC_500.0_sum',\n",
-            "       'UWND_925.0_sum', 'UWND_850.0_sum', 'UWND_700.0_sum', 'UWND_500.0_sum'],\n",
+            "Index(['WMAX_GFS', 'PRES_Surf_min', 'WSPD_Surf_min', 'UWND_Surf_max',\n",
+            "       'WSPD_Surf_max', 'WSPD_Surf_mean', 'WSPD_Surf_sum', 'HGHT_925.0_min',\n",
+            "       'HGHT_850.0_min', 'HGHT_700.0_min', 'HGHT_500.0_min', 'HGHT_850.0_max',\n",
+            "       'HGHT_700.0_max', 'UWND_925.0_max', 'UWND_850.0_max', 'UWND_700.0_max',\n",
+            "       'UWND_500.0_max', 'HGHT_925.0_mean', 'HGHT_850.0_mean',\n",
+            "       'HGHT_700.0_mean', 'HGHT_500.0_mean', 'UWND_850.0_mean',\n",
+            "       'UWND_700.0_mean', 'HGHT_925.0_sum', 'HGHT_850.0_sum', 'HGHT_700.0_sum',\n",
+            "       'UWND_850.0_sum', 'UWND_700.0_sum'],\n",
             "      dtype='object')\n"
           ],
           "name": "stdout"
@@ -4729,13 +4722,13 @@
         {
           "output_type": "stream",
           "text": [
-            "# of trees = 100\n",
+            "# of trees = 300\n",
             "Max features =  5\n",
-            "The Mean Absolute Error: 1.25 degrees celsius\n",
-            "The Median Absolute Error: 1.08 degrees celsius\n",
+            "The Mean Absolute Error: 1.22 degrees celsius\n",
+            "The Median Absolute Error: 1.00 degrees celsius\n",
             "The Root Mean Square Error: 1.59 degrees celsius \n",
             "Coefficient of determination: 0.72\n",
-            "[(0.116, 'WSPD_Surf_max'), (0.1077, 'WSPD_Surf_sum'), (0.0903, 'WSPD_Surf_mean'), (0.053, 'WSPD_Surf_min'), (0.0382, 'UWND_850.0_max'), (0.0364, 'UWND_850.0_mean'), (0.0277, 'UWND_850.0_sum'), (0.0272, 'VWND_Surf_max'), (0.0244, 'VWND_925.0_max'), (0.0244, 'UWND_925.0_max'), (0.0236, 'HGHT_925.0_min'), (0.0224, 'VWND_850.0_max'), (0.0198, 'UWND_Surf_max'), (0.0185, 'UWND_925.0_mean'), (0.0167, 'UWND_925.0_sum'), (0.0156, 'HGHT_850.0_min'), (0.0148, 'HGHT_925.0_mean'), (0.0136, 'UWND_700.0_max'), (0.0134, 'HGHT_850.0_mean'), (0.013, 'PRES_Surf_min'), (0.0128, 'UWND_Surf_mean'), (0.0125, 'VWND_700.0_max'), (0.0117, 'VWND_500.0_max'), (0.0112, 'UWND_Surf_sum'), (0.0112, 'UWND_850.0_min'), (0.0101, 'UWND_700.0_sum'), (0.0097, 'HGHT_850.0_sum'), (0.0096, 'UWND_700.0_mean'), (0.0092, 'WMAX_GFS'), (0.0086, 'HGHT_700.0_max'), (0.0083, 'TMAX_GFS'), (0.0083, 'HGHT_925.0_sum'), (0.0082, 'HGHT_500.0_mean'), (0.0079, 'TMPC_500.0_mean'), (0.0079, 'HGHT_500.0_min'), (0.0074, 'HGHT_700.0_min'), (0.0073, 'TMPC_500.0_sum'), (0.0071, 'HGHT_700.0_mean'), (0.0068, 'TMPC_500.0_min'), (0.0067, 'PRES_Surf_sum'), (0.0067, 'HGHT_850.0_max'), (0.0066, 'HGHT_500.0_sum'), (0.0066, 'HGHT_500.0_max'), (0.0061, 'UWND_500.0_mean'), (0.0061, 'TMIN_GFS'), (0.006, 'TMPC_850.0_min'), (0.0058, 'TMPC_925.0_min'), (0.0057, 'LCLD_Surf_mean'), (0.0056, 'UWND_500.0_max'), (0.0056, 'PRES_Surf_mean'), (0.0055, 'UWND_700.0_min'), (0.0055, 'TMPC_700.0_min'), (0.0053, 'HGHT_925.0_max'), (0.0051, 'UWND_500.0_sum'), (0.0051, 'LCLD_Surf_sum'), (0.0049, 'UWND_500.0_min'), (0.0048, 'HGHT_700.0_sum'), (0.0038, 'LCLD_Surf_max')]\n"
+            "[(0.3797, 'WSPD_Surf_max'), (0.1965, 'WSPD_Surf_mean'), (0.1827, 'WSPD_Surf_sum'), (0.0443, 'WSPD_Surf_min'), (0.0438, 'UWND_850.0_mean'), (0.0438, 'HGHT_500.0_mean'), (0.042, 'PRES_Surf_min'), (0.0346, 'UWND_925.0_max'), (0.0326, 'WMAX_GFS')]\n"
           ],
           "name": "stdout"
         }
@@ -4756,10 +4749,10 @@
       "metadata": {
         "id": "YkGTr_Wq6fz8",
         "colab_type": "code",
-        "outputId": "904268f1-d889-45dd-b686-3871144c3269",
+        "outputId": "83b80463-6e70-42d5-d334-8e4132a06a4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 514
+          "height": 494
         }
       },
       "source": [
@@ -4769,12 +4762,13 @@
         "print(relevant_features)\n",
         "features = relevant_features.keys().drop(['RTOT_Obs'])\n",
         "print(features)\n",
+        "features = ['PRCP_Surf_max', 'HCLD_Surf_mean', 'MCLD_Surf_mean', 'PRCP_Surf_mean', 'PRCP_Surf_sum', 'VWND_700.0_max', 'DWPC_700.0_mean', 'DWPC_500.0_mean']\n",
         "\n",
         "target = ['RTOT_Obs']\n",
         "\n",
-        "x_test, y_test, rf_model = rf_model_func(features, target, n_estimators = [100], max_features = [5])"
+        "x_test, y_test, rf_model = rf_model_func(features, target, n_estimators = [100], max_features = [3])"
       ],
-      "execution_count": 161,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "stream",
@@ -4813,29 +4807,16 @@
           "output_type": "stream",
           "text": [
             "# of trees = 100\n",
-            "Max features =  5\n",
-            "The Mean Absolute Error: 2.17 degrees celsius\n",
-            "The Median Absolute Error: 0.54 degrees celsius\n",
-            "The Root Mean Square Error: 4.21 degrees celsius \n",
+            "Max features =  3\n",
+            "The Mean Absolute Error: 2.16 degrees celsius\n",
+            "The Median Absolute Error: 0.51 degrees celsius\n",
+            "The Root Mean Square Error: 4.22 degrees celsius \n",
             "Coefficient of determination: 0.30\n",
-            "[(0.1971, 'PRCP_Surf_mean'), (0.1578, 'PRCP_Surf_sum'), (0.1205, 'PRCP_Surf_max'), (0.0775, 'VWND_700.0_max'), (0.0639, 'DWPC_700.0_mean'), (0.0631, 'DWPC_500.0_mean'), (0.0599, 'DWPC_500.0_sum'), (0.0575, 'DWPC_700.0_sum'), (0.0551, 'HCLD_Surf_mean'), (0.0524, 'MCLD_Surf_sum'), (0.0482, 'MCLD_Surf_mean'), (0.047, 'HCLD_Surf_sum')]\n"
+            "[(0.2007, 'PRCP_Surf_sum'), (0.2002, 'PRCP_Surf_mean'), (0.1359, 'PRCP_Surf_max'), (0.1099, 'DWPC_700.0_mean'), (0.099, 'DWPC_500.0_mean'), (0.086, 'MCLD_Surf_mean'), (0.0855, 'HCLD_Surf_mean'), (0.083, 'VWND_700.0_max')]\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UMpBMflE0bC_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
