--- a/Project4_Joyce_v2_2.ipynb
+++ b/Project4_Joyce_v2_2.ipynb
@@ -2553,7 +2553,7 @@
         "df1 = pd.merge(GFS_daily.reset_index(), KCMI_daily.reset_index(), on='Time', how='inner')\n",
         "df1.Time = pd.to_datetime(df1.Time)\n",
         "df1['Year'] = df1.Time.dt.year\n",
-        "df1"
+        "df1.head()"
       ],
       "execution_count": 90,
       "outputs": [
@@ -4622,7 +4622,7 @@
         "\n",
         "target = ['TMIN_Obs']\n",
         "\n",
-        "x_test, y_test, rf_model = rf_model_func(features, target, n_estimators = [1000], max_features = [5])\n"
+        "x_test, y_test, rf_model = rf_model_func(features, target, n_estimators = [1000], max_features = [5])"
       ],
       "execution_count": 178,
       "outputs": [
@@ -4749,7 +4749,7 @@
       "metadata": {
         "id": "YkGTr_Wq6fz8",
         "colab_type": "code",
-        "outputId": "83b80463-6e70-42d5-d334-8e4132a06a4b",
+        "outputId": "b6990fc4-5141-48cc-d02a-d61652087a4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 494
@@ -4766,9 +4766,9 @@
         "\n",
         "target = ['RTOT_Obs']\n",
         "\n",
-        "x_test, y_test, rf_model = rf_model_func(features, target, n_estimators = [100], max_features = [3])"
+        "x_test, y_test, rf_model = rf_model_func(features, target, n_estimators = [1000], max_features = [1])"
       ],
-      "execution_count": 199,
+      "execution_count": 206,
       "outputs": [
         {
           "output_type": "stream",
@@ -4806,17 +4806,30 @@
         {
           "output_type": "stream",
           "text": [
-            "# of trees = 100\n",
-            "Max features =  3\n",
-            "The Mean Absolute Error: 2.16 degrees celsius\n",
-            "The Median Absolute Error: 0.51 degrees celsius\n",
-            "The Root Mean Square Error: 4.22 degrees celsius \n",
-            "Coefficient of determination: 0.30\n",
-            "[(0.2007, 'PRCP_Surf_sum'), (0.2002, 'PRCP_Surf_mean'), (0.1359, 'PRCP_Surf_max'), (0.1099, 'DWPC_700.0_mean'), (0.099, 'DWPC_500.0_mean'), (0.086, 'MCLD_Surf_mean'), (0.0855, 'HCLD_Surf_mean'), (0.083, 'VWND_700.0_max')]\n"
+            "# of trees = 1000\n",
+            "Max features =  1\n",
+            "The Mean Absolute Error: 2.10 degrees celsius\n",
+            "The Median Absolute Error: 0.50 degrees celsius\n",
+            "The Root Mean Square Error: 4.01 degrees celsius \n",
+            "Coefficient of determination: 0.36\n",
+            "[(0.1591, 'PRCP_Surf_mean'), (0.1589, 'PRCP_Surf_sum'), (0.1464, 'PRCP_Surf_max'), (0.1187, 'DWPC_700.0_mean'), (0.1121, 'DWPC_500.0_mean'), (0.1035, 'VWND_700.0_max'), (0.1035, 'HCLD_Surf_mean'), (0.0978, 'MCLD_Surf_mean')]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B7vPos_HddNu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
