--- a/Project_4_merged_final.ipynb
+++ b/Project_4_merged_final.ipynb
@@ -6,7 +6,7 @@
       "name": "Project_4_merged_codenew.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMqt+mcnJo2WNrn7lXxbHSJ",
+      "authorship_tag": "ABX9TyMTqw5mCvDHz8GlIfaeD67q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,7 +184,7 @@
         "colab": {}
       },
       "source": [
-        "# to merge the daily tar files\n",
+        "# to merge the GFS daily tar files\n",
         "path = \"daily/\"\n",
         "all_files = glob.glob(path + \"*.csv\")\n",
         "all_files.sort()  # sort the files by time\n",
@@ -222,6 +222,7 @@
         "colab": {}
       },
       "source": [
+        "# to merge the GFS surface tar files\n",
         "path = \"surface/\"\n",
         "all_files = glob.glob(path + \"*.csv\")\n",
         "all_files.sort()\n",
@@ -263,6 +264,7 @@
         }
       },
       "source": [
+        "#read in the GFS Sfc .csv\n",
         "GFS_Sfc_new = pd.read_csv(\n",
         "    'GFS_Sfc_new.csv',\n",
         "    index_col='Time',\n",
@@ -271,6 +273,7 @@
         "GFS_Sfc_new.replace({9999.0: np.nan}, inplace=True)\n",
         "GFS_Sfc_new.replace({-9999.0: np.nan}, inplace=True)\n",
         "\n",
+        "#resample to daily\n",
         "GFS_Sfc_hourly_mean = GFS_Sfc_new.resample(\n",
         "    rule='24H',\n",
         "    closed='left',\n",
@@ -985,13 +988,14 @@
         "outputId": "046409ba-dcad-47e0-bdf6-de799f05bee4"
       },
       "source": [
+        "#read in GFS profile .csv\n",
         "GFS_profile = pd.read_csv(\n",
         "    'GFS_profile_new.csv',\n",
         "    index_col='Time',\n",
         "    parse_dates=True,\n",
         "    infer_datetime_format=True)\n",
         "\n",
-        "\n",
+        "#extract the profile values accordingly\n",
         "def extract_var_GFS_profile(var, level):\n",
         "    list = []\n",
         "    levels = [925, 850, 700, 500, 250, 100]\n",
@@ -1014,6 +1018,7 @@
         "GFS_profile.dropna(inplace=True)\n",
         "GFS_profile = GFS_profile.astype(float)\n",
         "\n",
+        "#resample to daily\n",
         "GFS_Sfc_hourly_sum = GFS_Sfc_new.resample(\n",
         "    rule='24H',\n",
         "    closed='left',\n",
@@ -2935,7 +2940,7 @@
         "# removing the Missing values\n",
         "KCMI_daily_new = KCMI_daily_new.iloc[:, :].replace('M', np.nan)\n",
         "\n",
-        "# Convert TMAX,TMIN to Celcius, W_MAX to m/s\n",
+        "# Convert TMAX,TMIN to C, W_MAX to m/s\n",
         "KCMI_daily_new['T_MAX(C)'] = (\n",
         "    KCMI_daily_new['T_MAX(F)'].astype(float) - 32) * 5 / 9\n",
         "KCMI_daily_new['T_MIN(C)'] = (\n",
@@ -2969,6 +2974,7 @@
         "colab": {}
       },
       "source": [
+        "#read in KCMI daily and hourly_resampled files\n",
         "KCMI_daily_final = pd.read_csv(\n",
         "    'KCMI_daily_format.csv',\n",
         "    index_col='Time',\n",
@@ -2991,13 +2997,14 @@
         "colab": {}
       },
       "source": [
+        "#read in GFS daily and surface/profile resampled files\n",
         "GFS_daily = pd.read_csv(\n",
         "    'GFS_daily_new.csv',\n",
         "    index_col='Time',\n",
         "    parse_dates=True)  # read in previously merged GFS daily file\n",
         "GFS_daily.index = GFS_daily.index + pd.DateOffset(hours=12)\n",
         "GFS_daily_new = GFS_daily[(GFS_daily.index >= '2010') & (\n",
-        "    GFS_daily.index < '2020')]  # choose 2010-2019 data\n",
+        "    GFS_daily.index < '2020')]  \n",
         "\n",
         "GFS_Sfc_final = pd.read_csv(\n",
         "    'GFS_Sfc_final.csv',\n",
@@ -3025,6 +3032,7 @@
         }
       },
       "source": [
+        "#combine all predictors into dataframe\n",
         "predictor_matrix = []\n",
         "predictor_matrix = KCMI_daily_final.merge(\n",
         "    KCMI_d_hourly_final, left_index=True, right_index=True)\n",
@@ -3064,6 +3072,7 @@
         }
       },
       "source": [
+        "#drop np.nan values and save as .csv\n",
         "predictor_matrix = predictor_matrix.astype(float)\n",
         "predictor_matrix = predictor_matrix.dropna()\n",
         "predictor_matrix.to_csv('predictor_matrix.csv')\n",
@@ -4264,12 +4273,11 @@
         "\n",
         "regressor = LinearRegression()\n",
         "\n",
-        "# fit the build the model by fitting the regressor to the training data\n",
+        "#fitting the regressor to the training data\n",
         "regressor.fit(X_train, y_train)\n",
         "\n",
-        "# make a prediction set using the test set\n",
+        "# make a prediction using the test set\n",
         "prediction = regressor.predict(X_test)\n",
-        "\n",
         "\n",
         "# Evaluate the prediction accuracy of the model\n",
         "\n",
@@ -4362,12 +4370,13 @@
         "\n",
         "regressor = LinearRegression()\n",
         "\n",
-        "# fit the build the model by fitting the regressor to the training data\n",
+        "#fitting the regressor to the training data\n",
         "regressor.fit(X_train, y_train)\n",
         "\n",
-        "# make a prediction set using the test set\n",
+        "# make a prediction using the test set\n",
         "prediction = regressor.predict(X_test)\n",
         "\n",
+        "# Evaluate the prediction accuracy of the model\n",
         "# Evaluate the prediction accuracy of the model\n",
         "print(\"The Explained Variance: %.2f\" % regressor.score(X_test, y_test))\n",
         "print(\"The Mean Absolute Error: %.2f degrees celsius\" %\n",
@@ -4455,12 +4464,13 @@
         "\n",
         "regressor = LinearRegression()\n",
         "\n",
-        "# fit the build the model by fitting the regressor to the training data\n",
+        "#fitting the regressor to the training data\n",
         "regressor.fit(X_train, y_train)\n",
         "\n",
-        "# make a prediction set using the test set\n",
+        "# make a prediction using the test set\n",
         "prediction = regressor.predict(X_test)\n",
         "\n",
+        "# Evaluate the prediction accuracy of the model\n",
         "# Evaluate the prediction accuracy of the model\n",
         "print(\"The Explained Variance: %.2f\" % regressor.score(X_test, y_test))\n",
         "print(\"The Mean Absolute Error: %.2f m/s\" %\n",
@@ -4549,12 +4559,14 @@
         "\n",
         "regressor = LinearRegression()\n",
         "\n",
-        "# fit the build the model by fitting the regressor to the training data\n",
+        "#fitting the regressor to the training data\n",
         "regressor.fit(X_train, y_train)\n",
         "\n",
-        "# make a prediction set using the test set\n",
+        "# make a prediction using the test set\n",
         "prediction = regressor.predict(X_test)\n",
+        "\n",
         "prediction[prediction < 0] = 0\n",
+        "\n",
         "# Evaluate the prediction accuracy of the model\n",
         "print(\"The Explained Variance: %.2f\" % regressor.score(X_test, y_test))\n",
         "print(\"The Mean Absolute Error: %.2f mm\" %\n",
