--- a/Project_4_merged_final.ipynb
+++ b/Project_4_merged_final.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Project_4_merged_codenew.ipynb",
+      "name": "Copy of Project_4_merged_codenew.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/joyceee916/ATMS-597-SP-2020-Project-4/blob/master/Project_4_merged_final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dfu2020/ATMS-597-SP-2020-Project-4/blob/master/Project_4_merged_final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -4806,7 +4806,8 @@
       "source": [
         "variable = 'T_MAX(C)'\n",
         "unit = 'degrees celsius'\n",
-        "relevant_features = cor_target[cor_target>0.70] # to identify features with the highest correlation to the target variable \n",
+        "# to identify features with the highest correlation to the target variable \n",
+        "relevant_features = cor_target[cor_target>0.70]\n",
         "features = [\n",
         "    'TMAX',\n",
         "    'TMIN',\n",
